--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Diary">
+            android:theme="@style/Theme.Diary.MySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
